bk_ida/gobmkida/c1/cut_connect_callback
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:498:52: error: unknown type name 'pattern_0'
void  cut_connect_callback( int anchor, int color, pattern_0 *pattern, int ll, void *data) 
                                                   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:500:1: error: use of undeclared identifier 'pattern_0'; did you mean 'pattern'?
pattern_0 *v5; // r13 
^~~~~~~~~
pattern
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:498:63: note: 'pattern' declared here
void  cut_connect_callback( int anchor, int color, pattern_0 *pattern, int ll, void *data) 
                                                              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:500:12: error: use of undeclared identifier 'v5'
pattern_0 *v5; // r13 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:526:1: error: use of undeclared identifier 'v5'
v5 = pattern; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:532:12: error: use of undeclared identifier 'v5'
i = 32LL * v5->move_offset; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:537:15: error: use of undeclared identifier 'v5'
if ( SLOBYTE( v5->class) >= 0 ) 
              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:539:35: error: use of undeclared identifier 'v5'
if ( !experimental_connections && v5->patlen > 0 ) 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:543:22: error: use of undeclared identifier 'v5'
v16 = transformation[v5->patn[i].offset][ll]; 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:556:69: error: use of undeclared identifier 'v5'
gprintf( "Connection struct pattern of type %s inhibited at %1m\n", v5->name); 
                                                                    ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:560:16: error: expected identifier or '('
struct pattern = ( pattern_0 *)v5->patlen; 
               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:563:6: error: use of undeclared identifier 'v5'
if ( v5->patlen > 0 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:565:8: error: use of undeclared identifier 'v5'
patn = v5->patn; 
       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:573:16: error: expected identifier or '('
struct pattern = ( pattern_0 *)( 32LL * patn[i].offset); 
               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:579:16: error: expected identifier or '('
struct pattern = ( pattern_0 *)( unsigned int)dragon[( int)v14].origin; 
               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:590:16: error: expected identifier or '('
struct pattern = ( pattern_0 *)( 76 * v14); 
               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:599:16: error: expected identifier or '('
struct pattern = ( pattern_0 *)v5->patlen; 
               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:611:8: error: use of undeclared identifier 'v5'
if ( ( v5->autohelper_flag & 1) != 0 
       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:612:69: error: use of undeclared identifier 'v5'
&& !( ( unsigned int (  *)( _QWORD, _QWORD, _QWORD, _QWORD, void *))v5->autohelper)( 
                                                                    ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:621:72: error: use of undeclared identifier 'v5'
helper = ( unsigned int (  *)( _QWORD, _QWORD, _QWORD, _QWORD, _QWORD))v5->helper; 
                                                                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:624:15: error: use of undeclared identifier 'v5'
if ( !helper( v5, ( unsigned int)ll, ( unsigned int)v10, ( unsigned int)color, data) ) 
              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:627:7: error: use of undeclared identifier 'v5'
v19 = v5->class; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:628:53: error: use of undeclared identifier 'v5'
if ( ( v19 & 0x10200) != 0 && ( v19 & 0x10) == 0 && v5->patlen > 0 ) 
                                                    ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:633:6: error: use of undeclared identifier 'v5'
if ( v5->patn[v20].att == 1 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:635:41: error: use of undeclared identifier 'v5'
v21 = anchor + ( __int64)transformation[v5->patn[v20].offset][ll]; 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:640:17: error: use of undeclared identifier 'v5'
while ( ++v20 < v5->patlen ); 
                ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:642:7: error: use of undeclared identifier 'v5'
v22 = v5->class; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:646:57: error: use of undeclared identifier 'v5'
gprintf( "Cutting struct pattern %s+%d found at %1m\n", v5->name, ( unsigned int)ll); 
                                                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:653:60: error: use of undeclared identifier 'v5'
gprintf( "Connecting struct pattern %s+%d found at %1m\n", v5->name, ( unsigned int)ll); 
                                                           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:657:68: error: use of undeclared identifier 'v5'
gprintf( "Lunch invalidating struct pattern %s+%d found at %1m\n", v5->name, ( unsigned int)ll); 
                                                                   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:659:8: error: use of undeclared identifier 'v5'
if ( ( v5->autohelper_flag & 2) != 0 ) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:660:58: error: use of undeclared identifier 'v5'
( ( void (  *)( _QWORD, _QWORD, _QWORD, __int64, void *))v5->autohelper)( 
                                                         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:666:7: error: use of undeclared identifier 'v5'
v23 = v5->class; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:688:6: error: use of undeclared identifier 'v5'
if ( v5->patlen > 0 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:694:27: error: use of undeclared identifier 'v5'
v28 = v9 + transformation[v5->patn[v26].offset][ll]; 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:695:7: error: use of undeclared identifier 'v5'
v29 = v5->class; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:698:16: error: expected identifier or '('
struct pattern = ( pattern_0 *)board[v28]; 
               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:699:35: error: use of undeclared identifier 'v5'
if ( ( _DWORD)pattern == color && v5->patn[v26].att == 2 && ( ( v29 & 0x10) != 0 || !worm[v28].attack_codes[0]) ) 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:708:52: error: use of undeclared identifier 'v5'
gprintf( "Pattern %s joins %C dragons %1m, %1m\n", v5->name, color); 
                                                   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:720:8: error: use of undeclared identifier 'v5'
if ( ( v5->class & 0x200) == 0 ) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:722:6: error: use of undeclared identifier 'v5'
if ( v5->patn[v26].att != 7 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/patterns/connections.c:746:15: error: use of undeclared identifier 'v5'
while ( v26 < v5->patlen ); 
              ^
41 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/cut_connect_callback/src/obj/3/connections.o] Error 1
